syntax = "proto3";

package org.nexo.grpc.interaction;

service InteractionService {
  rpc ExistLikeByIdAndUserId (IsLikeRequest) returns (IsLikeResponse);
  rpc ExistLikesByUserAndPostIds (BatchIsLikeRequest) returns (BatchIsLikeResponse);
  rpc ExistLikesByUserAndReelIds (BatchIsLikeRequest) returns (BatchIsLikeResponse);
}
message IsLikeRequest {
  int64 postId = 1;
  int64  reelId = 2;
  int64  userId = 3;
}
message IsLikeResponse {
  bool isLike = 1;
}
message BatchIsLikeRequest {
  int64 userId = 1;
  repeated int64 postIds = 2;
}

message LikeResult {
  int64 postId = 1;
  bool isLike = 2;
}
message BatchIsLikeResponse {
  repeated LikeResult results = 1;
}